--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,12 @@
     background-color: var(--var-dark-blue);
 }
 
+.bg-dark-blue-trans {
+    background-color: rgba(21, 61, 124, 0.85);
+    /* rgba(57, 72, 96, 0.75); */
+    backdrop-filter: blur(8px);
+}
+
 .bg-light-grey {
     background-color: var(--var-light-grey);
 }
@@ -239,7 +245,7 @@ h3 {
     width: 90%;
     height: 90%;
     
-    background: url(../img/romain.jpg);
+    background: url(../img/mathieu.jpg);
     /* transform: rotate(-13.76deg); */
     background-size: 100%;
     background-repeat: no-repeat;
@@ -371,3 +377,41 @@ select {
     color: #394860;
 
   }
+
+  .navbar {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 3px 1em 3px 0.5em !important;
+  }
+
+  .nav-item {
+    border: 1px solid white;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  .nav-item:hover {
+    background-color: hsla(217, 40%, 60%, 0.75);
+  }
+
+  .navbar-brand {
+      font-size: 1.5em;
+      margin-top: 4px;
+    }
+    .navbar-brand img {
+        margin-top: -6px;
+
+    }
+
+  .navbar-brand span span {
+    font-variant: small-caps;
+  }
+
+  /* .navbar-brand span{
+      margin-top: -50px !important;
+      margin: 0px !important;
+      padding: 0px !important;
+  } */
+
+
+  
